talos/tracearr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracearr
  namespace: tracearr
spec:
  selector:
    app: tracearr
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
