talos/tracearr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracearr
  namespace: tracearr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: tracearr.asandov.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracearr
                port:
                  number: 80
